# prime-large-scale-survey

./: jsonSchema.json  main.py  pyproject.toml  requirements.txt
prime_lss/: __main__.py  outputURLs.json  primeLSS.py  rehash.py  resolver.py  run.bash  test.py
prime_lss/preprocessing/: createSetOfAuthors.py
