[tool.poetry]
name = "prime-lss"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
progress = "^1.6"
jsonschema = "^4.17.3"
pylint = "^2.16.2"
cardinality = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prime-lss-resolver = "prime_lss.resolver:main"
prime-lss-rehash = "prime_lss.rehash:main"
